--- a/build.yaml
+++ b/build.yaml
@@ -21,5 +21,9 @@
 include:
   - board: nice_nano_v2
     shield: cosmos_left
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano_v2
     shield: cosmos_right
+  - board: nice_nano_v2 # Replace with the Pro Micro-compatible board you're using
+    shield: tester_pro_micro
